# ai-infra

./: .gitignore  ARCHITECTURE.md  README.md  TECH-STACK.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: predict.py  utils.py
backend/app/core/: config.py
backend/app/model/: model.joblib
backend/scripts/: download_data.py  prestart.sh  train_model.py
backend/tests/api/routes/: test_predict.py  test_utils.py
docs/: README.md  phase-01-foundation.md  phase-02-containerization.md  phase-03-terraform.md  phase-04-kubernetes.md  phase-05-devsecops.md  phase-06-observability.md  phase-07-staging.md  phase-08-autoscaling.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
